--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
-/* Site Stylesheet
-	1. Reset
-  2. Global Styles
-  3. Typography Styles
-  4. Structure Styles
-  5. Module Styles
-  6. Component Styles
-  7. Page Styles
+/* Site Stylesheet / SMACSS Architecture
+	1. RESET
+  2. BASE
+  3. LAYOUT
+  4. TYPOGRAPHY
+  5. MODULE
+  6. STATE
+  7. THEME
 
-/* 1. Reset
+
+/* 	1. RESET
 ======================================== */
 
 * {
@@ -16,7 +17,7 @@
     box-sizing: border-box;
 }
 
-/* 2. Global Styles
+/*   2. BASE
 ======================================== */
 html {
 		background-color: #624e4e;
@@ -30,16 +31,30 @@ body {
   margin: auto;
 }
 
-.cards a:link {
-  font-family: 'Plus Jakarta Sans', sans-serif;
-  font-size: 1.125em; /* 18px */
-  font-weight: 700;
-  color: #F74780;
-  line-height: 1.5;
-  text-decoration: none;
+/* 3. LAYOUT
+======================================== */
+
+.header {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  min-height: 6em;
 }
 
-/* 3. Typography Styles
+.hero {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  max-width: 50%;
+  height: 40em;
+}
+
+.courses {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* 4. TYPOGRAPHY
 ======================================== */
 
 h1 {
@@ -68,6 +83,7 @@ h4 {
   font-family: 'Plus Jakarta Sans', sans-serif;
   font-size: 1.5em; /* 24px */
   font-weight: 800;
+  color: #13183F;
   line-height: 1.2;
 }
 
@@ -75,63 +91,32 @@ p {
   font-family: 'Plus Jakarta Sans', sans-serif; 
 }
 
-p.body-m {
-  font-family: 'Plus Jakarta Sans', sans-serif;
+.p--medium {
   font-size: 1.125em; /* 18px */
   font-weight: 400;
   color: #83869A;
   line-height: 1.5;
 }
 
-p.body-s {
-  font-family: 'Plus Jakarta Sans', sans-serif;
+.p--small {
   font-size: 1em; /* 16px */
   font-weight: 800;
   color: #83869A;
   line-height: 1.5;
 }
 
-/* 4. Structure Styles
+/* 5. MODULE
 ======================================== */
 
-.flex {
-  display: flex;
+/* Header */
+
+.header__image {
+  height: 2em;
 }
 
-.hero {
-  width: 50%;
-  min-height: 730px;
-  flex-wrap: wrap;
-  align-content: center;
-}
+/* Buttons */
 
-header {
-  height: 110px;
-  background-color: #83869A;
-}
-
-.column-flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.column-flex-item {
-  display: flex;
-  flex-wrap: wrap;
-  flex-basis: 32%;
-  margin-bottom: 80px;
-  padding-bottom: 40px;
-  align-items: flex-end;
-}
-
-/* 5. Module Styles
-======================================== */
-
-/* 6. Component Styles
-======================================== */
-
-.button-2 {
+.hero__button {
   background:
   linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
   padding: 20px 30px;
@@ -146,48 +131,21 @@ header {
   text-decoration: none;
 }
 
-.button-2:hover {
-  background:
-  linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
-  linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
-}
-
-.card-intro {
-  background: linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
-  border-radius: 1em;
-  padding-left: 32px;
-  padding-top: 64px;
-  padding-right: 34px;
-  color: #ffffff;
-  height: 346px;
-}
+/* Cards */
 
 .card {
+  display: flex;
+  flex-wrap: wrap;
+  width: 30%;
+  min-height: 322px;
   background: #FFFFFF;
   box-shadow: 0px 25px 50px rgba(6, 22, 141, 0.0442381);
   border-radius: 15px;
   padding: 0 32px;
-  height: 322px;
+  margin-bottom: 4em;
 }
 
-.card h4 {
-  padding-bottom: 20px;
-}
-
-.card .body-m {
-  padding-bottom: 30px;
-}
-
-.card a {
-  font-family: 'Plus Jakarta Sans', sans-serif;
-  font-size: 1.125em; /* 18px */
-  font-weight: 700;
-  color: #F74780;
-  text-decoration: none;
-  align-self: flex-end;
-}
-
-.card-icon {
+.card__icon {
   width: 56px;
   height: 56px;
   position: relative;
@@ -195,9 +153,23 @@ header {
   bottom: -10px;
 }
 
-/* 7. Page Styles
+.card__intro {
+  padding: 20px 32px;
+  font-family: 'Plus Jakarta Sans', sans-serif; 
+  color: #ffffff;
+  background:
+  linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
+}
+
+.card__title {
+  flex-basis: 100%;
+}
+
+/* 6. STATE
 ======================================== */
 
-.hero .body-m {
-  margin-top: 30px;
+.hero__button:hover {
+  background:
+  linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
+  linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
 }
