--- a/styles.css
+++ b/styles.css
@@ -15,20 +15,34 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 /*   2. BASE
 ======================================== */
 html {
-		background-color: #624e4e;
+		background-color: #FFFFFF;
     background-image: url(../02_CODE/assets/image-hero-desktop.png);
     background-repeat: no-repeat;
     background-position: 700px -100px;
 }
 
 body {
-  width: 1110px;
   margin: auto;
+}
+
+main {
+  width: 100%;
+  background: linear-gradient(180deg, rgba(255,255,255,0), rgba(240,241,255,1));
+}
+
+header {
+  max-width: 1100px;
+  margin: auto;
+}
+
+a:link {
+  font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
 /* 3. LAYOUT
@@ -38,6 +52,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
+  align-items: center;
   min-height: 6em;
 }
 
@@ -45,21 +60,29 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
-  max-width: 50%;
+  max-width: 45%;
   height: 40em;
+  margin-bottom: 10em;
 }
 
 .courses {
   display: flex;
   justify-content: space-between;
+  margin-top: 5em;
 }
+
+.main__content-wrapper {
+  max-width: 1100px;
+  margin: auto;
+}
+
 
 /* 4. TYPOGRAPHY
 ======================================== */
 
 h1 {
   font-family: 'Plus Jakarta Sans', sans-serif;
-  font-size: 3.5em; /* 56px */
+  font-size: 3.5rem; /* 56px */
   font-weight: 800;
   color: #13183F;
   line-height: 1.2;
@@ -67,39 +90,41 @@ h1 {
 
 h2 {
   font-family: 'Plus Jakarta Sans', sans-serif;
-  font-size: 2.5em; /* 40px */
+  font-size: 2.5rem; /* 40px */
   font-weight: 800;
   line-height: 1.2;
 }
 
 h3 {
   font-family: 'Plus Jakarta Sans', sans-serif;
-  font-size: 2em; /* 32px */
+  font-size: 2rem; /* 32px */
   font-weight: 800;
   line-height: 1.2;
 }
 
 h4 {
   font-family: 'Plus Jakarta Sans', sans-serif;
-  font-size: 1.5em; /* 24px */
+  font-size: 1.5rem; /* 24px */
   font-weight: 800;
   color: #13183F;
-  line-height: 1.2;
+  margin-bottom: 0px;
 }
 
 p {
   font-family: 'Plus Jakarta Sans', sans-serif; 
+  color: #83869A;
+  line-height: 1.5;
 }
 
 .p--medium {
-  font-size: 1.125em; /* 18px */
+  font-size: 1.125rem; /* 18px */
   font-weight: 400;
   color: #83869A;
   line-height: 1.5;
 }
 
 .p--small {
-  font-size: 1em; /* 16px */
+  font-size: 1rem; /* 16px */
   font-weight: 800;
   color: #83869A;
   line-height: 1.5;
@@ -108,10 +133,15 @@ p {
 /* 5. MODULE
 ======================================== */
 
-/* Header */
-
-.header__image {
+/* Nav */
+.nav__image {
   height: 2em;
+}
+
+/* Hero */
+
+.hero__title {
+  padding-bottom: 1rem;
 }
 
 /* Buttons */
@@ -125,10 +155,24 @@ p {
   border: 0;
   cursor: pointer;
   font-family: 'Plus Jakarta Sans', sans-serif;
-  font-size: 1.125em; /* 18px */
+  font-size: 1.125rem; /* 18px */
   font-weight: 700;
   color: #ffffff;
   text-decoration: none;
+}
+
+.nav__button {
+  background-color: #13183F;
+  padding: 20px 30px;
+  border-radius: 2.5em;
+  border: 0;
+  cursor: pointer;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-size: 1.125rem; /* 18px */
+  font-weight: 700;
+  color: #ffffff;
+  text-decoration: none;
+  margin-left: auto;
 }
 
 /* Cards */
@@ -136,14 +180,25 @@ p {
 .card {
   display: flex;
   flex-wrap: wrap;
+  align-content: flex-start;
+  flex-direction: column;
   width: 30%;
-  min-height: 322px;
+  min-height: 18.75em;
   background: #FFFFFF;
   box-shadow: 0px 25px 50px rgba(6, 22, 141, 0.0442381);
   border-radius: 15px;
-  padding: 0 32px;
+  padding: 0 32px 32px 32px;
   margin-bottom: 4em;
 }
+
+.card__first {
+  padding: 20px 32px;
+  font-family: 'Plus Jakarta Sans', sans-serif; 
+  color: #ffffff;
+  background:
+  linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
+}
+
 
 .card__icon {
   width: 56px;
@@ -153,16 +208,18 @@ p {
   bottom: -10px;
 }
 
-.card__intro {
-  padding: 20px 32px;
-  font-family: 'Plus Jakarta Sans', sans-serif; 
-  color: #ffffff;
-  background:
-  linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
+.card__info-link {
+  margin-top: auto;
 }
 
 .card__title {
-  flex-basis: 100%;
+  padding-bottom: 1rem;
+}
+
+.card__link {
+  font-weight: 800;
+  text-decoration: none;
+  color: #F74780;
 }
 
 /* 6. STATE
@@ -172,4 +229,12 @@ p {
   background:
   linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
   linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
+}
+
+.nav__button:hover {
+  background-color: #666CA3;
+}
+
+.card__link:hover {
+  color: #FFA7C3;
 }
