--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,11 @@ header {
   margin: auto;
 }
 
+footer {
+  background-color: #13183F;
+  height: 120px;
+}
+
 a:link {
   font-family: 'Plus Jakarta Sans', sans-serif;
 }
@@ -74,6 +79,10 @@ a:link {
 .main__content-wrapper {
   max-width: 1100px;
   margin: auto;
+}
+
+.footer__content {
+  width: 1100px;
 }
 
 
