--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,11 @@
-/* Site Stylesheet / SMACSS Architecture
+/* Site Stylesheet
 
-	1. RESET
+  1. RESET
   2. BASE
   3. LAYOUT
   4. TYPOGRAPHY
   5. MODULE
   6. STATE
-  7. THEME
 
   */
 
